--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ p {
     font-size: 16px;
     width: 100%;
     text-align: start;
+    opacity: 0.5;
 }
 
 #pDivOne {
@@ -91,11 +92,14 @@ p {
 
 #pDivDollar {
     padding: 0.6em 0;
-}
-
-#dollar {
+    opacity: 1;
     font-size: 25px;
     font-weight: 700;
+}
+span {
+    opacity: .5;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 #pDivTwo {
