--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ p {
     font-size: 16px;
     width: 100%;
     text-align: start;
-    opacity: 0.5;
 }
 
 #pDivOne {
@@ -104,6 +103,7 @@ span {
 
 #pDivTwo {
     padding: 0.6em 0;
+    opacity: ;
 }
 
 
@@ -129,6 +129,7 @@ button {
     font-size: 12px;
     padding:0.6em 0;
     line-height: 115%;
+    opacity: 0.5;
 }
 
 button:hover {
